--- a/one/GeoQuiz/src/main/res/layout/activity_quiz.xml
+++ b/one/GeoQuiz/src/main/res/layout/activity_quiz.xml
@@ -4,10 +4,10 @@
               android:gravity="center"
               android:orientation="vertical" >
 
-  <TextView android:layout_width="wrap_content"
+  <TextView android:id="@+id/question_text_view"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="24dp"
-            android:text="@string/question_text" />
+            android:padding="24dp" />
 
   <LinearLayout android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -22,6 +22,22 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/false_button" />
+
+  </LinearLayout>
+
+  <LinearLayout android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" >
+
+    <Button android:id="@+id/previous_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/arrow_left" />
+
+    <Button android:id="@+id/next_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableRight="@drawable/arrow_right" />
 
   </LinearLayout>
 
