Use ImageButton instead of Buttons

--- a/one/GeoQuiz/src/main/res/layout/activity_quiz.xml
+++ b/one/GeoQuiz/src/main/res/layout/activity_quiz.xml
@@ -29,15 +29,15 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal" >
 
-    <Button android:id="@+id/previous_button"
+    <ImageButton android:id="@+id/previous_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/arrow_left" />
+            android:src="@drawable/arrow_left" />
 
-    <Button android:id="@+id/next_button"
+    <ImageButton android:id="@+id/next_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableRight="@drawable/arrow_right" />
+            android:src="@drawable/arrow_right" />
 
   </LinearLayout>
 
